--- a/1_TensorFlow_Fundamentals.ipynb
+++ b/1_TensorFlow_Fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrcV0caHytCqjkjcw4ijeq",
+      "authorship_tag": "ABX9TyNVp9tXVSYLFQfHw5CrRSI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,9 +431,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#  creating random tensors\n",
-        "#  Random tensors = tensors with arbitary size which consists anyrandom numbers\n",
-        "#  Overview of neural network learning ==> initialize random weights, give examples, update representation outputs and repeat with more examples\n"
+        " creating random tensors\n",
+        "\n",
+        " Random tensors = tensors with arbitary size which consists any random numbers\n",
+        "\n",
+        "Overview of neural network learning ==> initialize random weights, give examples, update representation outputs and repeat with more examples\n",
+        ""
       ],
       "metadata": {
         "id": "IxYgiWpKtJL1"
