Indexing and expanding existing tensors

--- a/1_TensorFlow_Fundamentals.ipynb
+++ b/1_TensorFlow_Fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVp9tXVSYLFQfHw5CrRSI/",
+      "authorship_tag": "ABX9TyNk1EP4fq9c8jOWDnzNG3yu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,7 +431,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " creating random tensors\n",
+        "# Creating random tensors\n",
         "\n",
         " Random tensors = tensors with arbitary size which consists any random numbers\n",
         "\n",
@@ -792,7 +792,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tensor attributes to fetch information from tensors"
+        "# Tensor **attributes** to fetch information from tensors\n",
+        "\n",
+        "Shape = Length/ number of elements of each dimensions of a tensor ( tensor.shape)\n",
+        "\n",
+        "Rank = Number of tensor dimensions( scalar = 0, vector = 1, matrix = 2, tensor = n ) ( tensor.ndim)\n",
+        "\n",
+        "Axis / dimension = Sprcific dimension of a tensor ( tensor[0], tensor[:, 1], ...\n",
+        "\n",
+        "size = Total number of items in tensor ( tf.size( tensor) )"
       ],
       "metadata": {
         "id": "Oi4MMz-xdq9r"
@@ -800,11 +808,497 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#  creating tensor of rank 4 ( 4 D tensor )\n",
+        "\n",
+        "rank_4_tens = tf.ones( shape =( 2, 4, 2, 5))\n",
+        "\n",
+        "rank_4_tens"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eyhxRNsRYsrj",
+        "outputId": "b075c607-b440-4b85-9a72-9dfeac56e9db"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 4, 2, 5), dtype=float32, numpy=\n",
+              "array([[[[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]]],\n",
+              "\n",
+              "\n",
+              "       [[[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "        [[1., 1., 1., 1., 1.],\n",
+              "         [1., 1., 1., 1., 1.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rank_4_tens[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n3wUyiRVjZRT",
+        "outputId": "0ef08133-043a-4b55-c7f3-55a4b94a6f3d"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4, 2, 5), dtype=float32, numpy=\n",
+              "array([[[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "       [[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "       [[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]],\n",
+              "\n",
+              "       [[1., 1., 1., 1., 1.],\n",
+              "        [1., 1., 1., 1., 1.]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rank_4_tens.shape, rank_4_tens.ndim, tf.size( rank_4_tens)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zadIbuS_jnGH",
+        "outputId": "6d5461f9-1aff-42cb-e291-9f5a236457fe"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([2, 4, 2, 5]), 4, <tf.Tensor: shape=(), dtype=int32, numpy=80>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#  different attributes of tensor\n",
+        "\n",
+        "print( \" Datatype of every elements : \", rank_4_tens.dtype)\n",
+        "\n",
+        "print( \" Number of dimensions(rank) : \", rank_4_tens.ndim)\n",
+        "\n",
+        "print( \" Shape of tensor : \" , rank_4_tens.shape)\n",
+        "print( \" Elements along 0 axis : \", rank_4_tens.shape[0])\n",
+        "print(\" Elements along last axis : \", rank_4_tens.shape[-1])\n",
+        "print( \" Total number of elements in tensor : \", tf.size( rank_4_tens))\n",
+        "\n",
+        "print( \" Total number of elements in tensor : \", tf.size( rank_4_tens).numpy())  # single count of elements"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sS_2wJQKkGjp",
+        "outputId": "5df5ab87-573d-4331-fd4e-607bd693fd94"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " Datatype of every elements :  <dtype: 'float32'>\n",
+            " Number of dimensions(rank) :  4\n",
+            " Shape of tensor :  (2, 4, 2, 5)\n",
+            " Elements along 0 axis :  2\n",
+            " Elements along last axis :  5\n",
+            " Total number of elements in tensor :  tf.Tensor(80, shape=(), dtype=int32)\n",
+            " Total number of elements in tensor :  80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Index and expand on tensors"
+      ],
+      "metadata": {
+        "id": "olWjbzlMlwo6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Examp_list = [1, 2, 4, 5]\n",
+        "\n",
+        "Examp_list[:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bcKuCm_Tmi6C",
+        "outputId": "83477123-9eca-4a6a-eaf3-fb5398f5c80e"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  indexing tensors like python lists\n",
+        "\n",
+        "#  fetching first 2 elements of each dimension\n",
+        "\n",
+        "rank_4_tens[:2, :2, :2, :2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GKkiuYbtk468",
+        "outputId": "f26d84dd-200f-45f5-94e5-e999384672f5"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 2, 2), dtype=float32, numpy=\n",
+              "array([[[[1., 1.],\n",
+              "         [1., 1.]],\n",
+              "\n",
+              "        [[1., 1.],\n",
+              "         [1., 1.]]],\n",
+              "\n",
+              "\n",
+              "       [[[1., 1.],\n",
+              "         [1., 1.]],\n",
+              "\n",
+              "        [[1., 1.],\n",
+              "         [1., 1.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Examp_list[:1]\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WTP3vq-1m1c0",
+        "outputId": "ea27c381-1535-4686-9528-ad92109f0347"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  getting first element from each dimension from each index except the last one\n",
+        "rank_4_tens[:1, :1, :1, :]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oKciX924oq9v",
+        "outputId": "5b950e17-28da-4a4d-8201-0890ac145c17"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 1, 1, 5), dtype=float32, numpy=array([[[[1., 1., 1., 1., 1.]]]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  creating a rank 2 tensor ( matrix)\n",
+        "\n",
+        "rank2_tens = tf.constant([[5, 2], [9, 4]])\n",
+        "\n",
+        "rank2_tens.shape, rank2_tens.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lp95aahUo_KR",
+        "outputId": "f6b6426e-57d4-450d-95ca-80e4891d64da"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(TensorShape([2, 2]), 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Extracting last item from each row\n",
+        "\n",
+        "rank2_tens[:-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kHCnp_5mpbUS",
+        "outputId": "d530837f-5fca-42b6-86ff-ebfe843a90e2"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 2), dtype=int32, numpy=array([[5, 2]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Adding extra dimension to rank2 tensor, keeping old data same\n",
+        "#  newaxis adds a new dimension to the existing tensor at last axis\n",
+        "\n",
+        "rank3_tens = rank2_tens[..., tf.newaxis]\n",
+        "rank3_tens\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QgtRcxB1ptNN",
+        "outputId": "da11c482-4045-432f-ff51-20b49e6b7275"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+              "array([[[5],\n",
+              "        [2]],\n",
+              "\n",
+              "       [[9],\n",
+              "        [4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  tf.expand_dim() , alternate to tf.newaxis() to expand final axis(-1) in existing tensor\n",
+        "\n",
+        "tf.expand_dims(rank2_tens, axis = -1)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wX-QiBfHqOMR",
+        "outputId": "230a420a-49df-4952-bae2-08ae324ee4a1"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+              "array([[[5],\n",
+              "        [2]],\n",
+              "\n",
+              "       [[9],\n",
+              "        [4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  expanding the 0th axis\n",
+        "\n",
+        "tf.expand_dims(rank2_tens, axis = 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OnZt8eK-q-ED",
+        "outputId": "917ce7d2-ba96-406c-91de-f9a45624dfc1"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 2, 2), dtype=int32, numpy=\n",
+              "array([[[5, 2],\n",
+              "        [9, 4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  expanding the 1st axis\n",
+        "\n",
+        "tf.expand_dims(rank2_tens, axis = 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t4qj0J_3rhaF",
+        "outputId": "99d902a6-24b4-4dbb-82fa-9883d64db8d0"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 1, 2), dtype=int32, numpy=\n",
+              "array([[[5, 2]],\n",
+              "\n",
+              "       [[9, 4]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tensor operations"
+      ],
+      "metadata": {
+        "id": "5mVNtsk6r4XL"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eyhxRNsRYsrj"
+        "id": "vmEu2VHtrqpU"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     }
   ]
